--- a/Fifa/index.html
+++ b/Fifa/index.html
@@ -28,7 +28,7 @@
       <td>The inauguration of the stadium took place on October 22, 2021, on the occasion of the Emir Cup Final.[19][12]In May 2018, the Al-Thumama Stadium was awarded the MIPIM/Architectural Review Future Project Award in the Sports and Stadiums category.[20][21]The stadium hosted six matches during the FIFA Arab Cup 2021 tournament, including a semi-final match[22] between hosts Qatar and Algeria.[23]</td>
       <td><img src="/Google Images.png" alt="Al Thumama Stadium	" width="280"></td>
       <td>The stadium was initially announced under the name Ras Abu Aboud Stadium. During a launch event on 20 November 2021, the venue was officially renamed Stadium 974.[5]It hosted its first match on 30 November 2021 on the opening day of the 2021 FIFA Arab Cup, between the United Arab Emirates and Syria.[14] The stadium hosted six matches during the tournament.</td> 
-      <td><img src="/qatar sees completion of modular 'stadium 974,' built with reused shipping containers.jfif" width="280" alt="974Stadium"></td>
+      <td><img src="qatar sees completion of modular 'stadium 974,' built with reused shipping containers.jfif" width="280" alt="974Stadium"></td>
     </tr>
     <tr>
         <td>On 9 September 2022, the Lusail Stadium hosted the Saudi-Egyptian Super Cup, a tournament that served as a rehearsal for the World Cup finals, held between the two teams of Al Hilal, the 2021–22 Saudi Arabian champion, and Zamalek, the 2021–22 Egyptian champion. The two sides played out 1–1 draw, with Al Hilal triumphing 4–1 after a penalty shootout.[20]</td>
