--- a/Fifa/index.html
+++ b/Fifa/index.html
@@ -17,7 +17,7 @@
         } 
         
     </style>
-    <link rel="icon" href="/FIFA World Cup Qatar 2022 Logo Revealed.jfif">
+    <link rel="icon" href="FIFA World Cup Qatar 2022 Logo Revealed.jfif">
 </head>
 <body>
 <h1 style="color: gold;">2022 FIFA World Cup</h1>
@@ -26,21 +26,21 @@
 <table>
     <tr>
       <td>The inauguration of the stadium took place on October 22, 2021, on the occasion of the Emir Cup Final.[19][12]In May 2018, the Al-Thumama Stadium was awarded the MIPIM/Architectural Review Future Project Award in the Sports and Stadiums category.[20][21]The stadium hosted six matches during the FIFA Arab Cup 2021 tournament, including a semi-final match[22] between hosts Qatar and Algeria.[23]</td>
-      <td><img src="/Google Images.png" alt="Al Thumama Stadium	" width="280"></td>
+      <td><img src="Google Images.png" alt="Al Thumama Stadium	" width="280"></td>
       <td>The stadium was initially announced under the name Ras Abu Aboud Stadium. During a launch event on 20 November 2021, the venue was officially renamed Stadium 974.[5]It hosted its first match on 30 November 2021 on the opening day of the 2021 FIFA Arab Cup, between the United Arab Emirates and Syria.[14] The stadium hosted six matches during the tournament.</td> 
-      <td><img src="/qatar sees completion of modular 'stadium 974,' built with reused shipping containers.jfif" width="280" alt="974Stadium"></td>
+      <td><img src="qatar sees completion of modular 'stadium 974,' built with reused shipping containers.jfif" width="280" alt="974Stadium"></td>
     </tr>
     <tr>
         <td>On 9 September 2022, the Lusail Stadium hosted the Saudi-Egyptian Super Cup, a tournament that served as a rehearsal for the World Cup finals, held between the two teams of Al Hilal, the 2021–22 Saudi Arabian champion, and Zamalek, the 2021–22 Egyptian champion. The two sides played out 1–1 draw, with Al Hilal triumphing 4–1 after a penalty shootout.[20]</td>
-        <td><img src="/Lusail-Iconic-Stadium_Norman-Foster_plusMOOD04.jfif" alt="Lusail Iconic Stadium" width="280"></td>
+        <td><img src="Lusail-Iconic-Stadium_Norman-Foster_plusMOOD04.jfif" alt="Lusail Iconic Stadium" width="280"></td>
         <td>The inauguration of the stadium took place on 30 November 2021, on the occasion of opening ceremony for the FIFA Arab Cup 2021, on the occasion of the Emir Cup Final.[19][12]In May 2018, the followed by a match between the host Qatar and Bahrain, in which the reigning Asian champion Qatar survived a last-minute scare to fend off the visitor 1–0, courtesy of a header from Abdu</td>
-        <td><img src="/Stadium in giant tent completes ahead of World Cup in Qatar.png" width="280" alt="Al Bayt Stadium"></td>
+        <td><img src="Stadium in giant tent completes ahead of World Cup in Qatar.png" width="280" alt="Al Bayt Stadium"></td>
     </tr>
     <tr>
         <td>Qatar was chosen to host the 2022 FIFA World Cup in 2010. It would become the first Muslim-majority country and the first country in the Middle East to host the World Cup.[9] Qatar previously did not have the sporting capability for the Cup, and as such 8 new stadiums are expec19, during the 2019 Amir Cup final between Al Sadd SC and Al-Duhail SC played in front of an audience of 38,678 people</td>
-        <td><img src="/2022 FIFA WORLD CUP STADIUM QATAR.jfif" alt="Al Janoub Stadium" width="280"></td>
+        <td><img src="2022 FIFA WORLD CUP STADIUM QATAR.jfif" alt="Al Janoub Stadium" width="280"></td>
         <td>On 30 September 2019, FIFA announced the Education City Stadium as the host of the third place match and final of the 2019 FIFA Club World Cup, with the tournament being held in Qatar.[17] The stadium would also have hosted Liverpool’s first match in the semi-finals, but on 7 December 2019, the official opening of Education City Stadium was postponed until early 2020.[18] Thus, Liverpool's open </td>
-        <td><img src="/Work set to start on Qatar's diamond-shaped World Cup stadium.jfif" width="280" alt="974Stadium"></td>
+        <td><img src="Work set to start on Qatar's diamond-shaped World Cup stadium.jfif" width="280" alt="974Stadium"></td>
     </tr>
   </table>
 
