--- a/Omar ebn elkhattab/index.html
+++ b/Omar ebn elkhattab/index.html
@@ -10,8 +10,8 @@
 <body dir="rtl">
 <header>
     <nav>
-        <a href="/Assiment1/index.html">عمر بن الخطاب</a>
-        <a href="/Assiment1/main.html">الصفحه الرئيسيه</a>
+        <a href="index.html">عمر بن الخطاب</a>
+        <a href="main.html">الصفحه الرئيسيه</a>
     </nav>
 </header>
 <hr>
@@ -21,7 +21,7 @@
             عمر بن الخطاب هو أحد الصحابة رسول الله ‘,هو ثاني الخلفاء الراشدين وهو أحد المبشرين بالجنة.
             
         </section>
-        <img src="/Assiment1/Umar2.png" alt="عمر بن الخطاب" width="300" height="300">
+        <img src="Umar2.png" alt="عمر بن الخطاب" width="300" height="300">
         <h1>أشهر الالقاب</h1>
         <section class="section2">
             <ul>
