--- a/Omar ebn elkhattab/main.html
+++ b/Omar ebn elkhattab/main.html
@@ -9,8 +9,8 @@
 </head>
 <body dir="rtl">
     <header>
-        <a href="/Assiment1/index.html">عمر بن الخطاب</a>
-        <a href="/Assiment1/main.html">الصفحه الرئيسيه</a>
+        <a href="index.html">عمر بن الخطاب</a>
+        <a href="main.html">الصفحه الرئيسيه</a>
     </header>
     <div class="name">Ahmed Sallam</div>
 </body>
