--- a/Resturant/index.html
+++ b/Resturant/index.html
@@ -11,7 +11,7 @@
     <div id="home">
         <div class="nav-bar">
             <div class="nav-img">
-                <img src="/images/restaurant.png" alt="">
+                <img src="restaurant.png" alt="">
             </div>
             <div class="nav-info">
                 <ul>
@@ -26,7 +26,7 @@
         </div>
 
         <div class="info-home">
-            <img src="/images/restaurant.png" alt="">
+            <img src="restaurant.png" alt="">
             <h1>French Restaurant</h1>
             <p>We're the best restaurant in town</p>
             <button class="btn1">Learn more</button>
@@ -37,7 +37,7 @@
 <!--About-->
 <div id="about">
     <div class="about-img">
-        <img src="/images/chef-2.jpg" alt="">
+        <img src="chef-2.jpg" alt="">
     </div>
     <div class="about-info">
         <p>discover</p>
@@ -53,25 +53,25 @@
 <!---->
 <div id="meals">
     <div class="meal">
-        <img src="/images/rigel-food-sec-2-img1-200x200.jpg" alt="">
+        <img src="rigel-food-sec-2-img1-200x200.jpg" alt="">
         <h2>CHICKEN DRUMSTICKS</h2>
         <div class="bord"></div>
         <p>Objectively product front end action items and high standards in manufactured products.</p>
     </div>
     <div class="meal">
-        <img src="/images/rigel-food-sec-2-img5-200x200.jpg" alt="">
+        <img src="rigel-food-sec-2-img5-200x200.jpg" alt="">
         <h2>CHICKEN DRUMSTICKS</h2>
         <div class="bord"></div>
         <p>Objectively product front end action items and high standards in manufactured products.</p>
     </div>
     <div class="meal">
-        <img src="/images/rigel-food-sec-2-img3-200x200.jpg" alt="">
+        <img src="rigel-food-sec-2-img3-200x200.jpg" alt="">
         <h2>CHICKEN DRUMSTICKS</h2>
         <div class="bord"></div>
         <p>Objectively product front end action items and high standards in manufactured products.</p>
     </div>
     <div class="meal">
-        <img src="/images/rigel-food-sec-2-img4-200x200.jpg" alt="">
+        <img src="rigel-food-sec-2-img4-200x200.jpg" alt="">
         <h2>CHICKEN DRUMSTICKS</h2>
         <div class="bord"></div>
         <p>Objectively product front end action items and high standards in manufactured products.</p>
@@ -82,7 +82,7 @@
     <div class="footer">
     <div class="footer-kjhjk"></div>
     <div class="footer-copy">
-        <img src="/images/bakery-light-1.png" alt="">
+        <img src="bakery-light-1.png" alt="">
         <p>&copy;Copyright 2017. All rights reserved.</p></div>
     </div>
     </div>
