--- a/Family Baker/index.html
+++ b/Family Baker/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+filled"rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Bakery</title>
 </head>
 <body>
@@ -22,8 +24,8 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#our offer">Our offer</a></li>
                     <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#content">Contact</a></li>
                     <div class="clr"></div>
 
                 </ul>
@@ -111,7 +113,7 @@
 <!-- map -->
 
 
-<div class="map">
+<div class="map" id="content">
     <div class="map-text">
         <h2>Contact Information</h2>
         <p class="on">I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.</p>
@@ -133,70 +135,94 @@
 
 
 
-<!-- footer
-<footer class="section-end">
-<div class="footer-content">
-    <div class="text">
-         <h4>About Us</h4>
-        <p>I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur.</p>
-        <p>We are the champions! We are the most amazing theme of all time, yeah.</p>
+<!-- footer-->
+<footer class="section-end" id="blog">
+    <div class="footer-content">
+        <div class="text">
+            <h4>About Us</h4>
+            <ul class="as-first">
+                <li>
+                    <p>I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur. I am text block. Click edit button to change this text. Lorem ipsum dolor sit amet, consectetur.<br><br>
+
+                        We are the champions! We are the most amazing theme of all time, yeah.</p>
+                </li>
+            </ul>
+        </div>
+        <div class="text">
+            <h4>Why We Are Special?</h4>
+            <ul class="as">
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Our magical recipe.</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>We care about environment.</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>We are trusted by hundreds of clients.</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Social media loves us!</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>This list is super easy to create.</p>
+                </li>
+            </ul>
+        </div>
+        <div class="text">
+            <h4>Opening Hours</h4>
+            <ul class="as">
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Monday 10AM - 9PM</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Tuesday 10AM - 9PM</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Wednesday 10AM - 9PM</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Thursday 10AM - 10PM</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Friday 10AM - 10PM</p>
+                </li>
+                <li><i class="material-icons-outlined">keyboard_arrow_right</i>
+                    <p>Weekends 10AM - 11PM</p>
+                </li>
+            </ul>
+        </div>
+        <div class="text">
+            <h4>Contact Details</h4>
+            <ul class="as-last">
+                <li><i class="fa fa-map-marker"></i><a href="">Manchester Road 123-78B, Silictown 7854MD, Great Country</a></li>
+                <li><i class="material-icons-outlined">phone_enabled</i><a href="">+46 123 456 789</a></li>
+                <li><i class="material-icons-outlined">email</i><a href="">Friday 10AM - 10PM Weekends 10AM - 11PM Contact Details Manchester Road
+                        123-78B, Silictown 7854MD, Great Country +46 123 456 789 hello@sitename.com</a></li>
+                <li><i class="material-icons-outlined">language</i><a href="">http://www.sitename.com</a></li>
+            </ul>
+            <p></p>
+            <p></p>
+            <div class="border"></div>
+            <p></p>
+            <div class="border"></div>
+            <p></p>
+            <div class="border"></div>
+        </div>
+        <div class="clr"></div>
     </div>
-    <div class="clr"></div>   
-    <div class="text">
-        <h4>Why We Are Special?</h4>
-        <p>Our magical recipe.</p>
-        <div class="border"></div>
-        <p>We care about environment.</p>
-        <div class="border"></div>
-        <p>We are trusted by hundreds of clients.</p>
-        <div class="border"></div>
-        <p>Social media loves us!</p>
-        <div class="border"></div>
-        <p>This list is super easy to create.</p>
-        <div class="border"></div>
+    
+    <div class="footer-end">
+        <img src="bakery-light-1.png" alt="">
+        <p>Copyright 2017. All rights reserved.</p>
+        <ul>
+            <li><a href="home" class="fa fa-facebook"></a></li>
+            <li><a href="home" class="fa fa-google-plus"></a></li>
+            <li><a href="home" class="fa fa-twitter"></a></li>
+            <li><a href="home" class="fa fa-linkedin"></a></li>
+        </ul>
     </div>
-    <div class="text">
-        <h4>Opening Hours</h4>
-        <p>Monday 10AM - 9PM</p>
-        <div class="border"></div>
-        <p>Tuesday 10AM - 9PM</p>
-        <div class="border"></div>
-        <p>Wednesday 10AM - 9PM</p>
-        <div class="border"></div>
-        <p>Thursday 10AM - 10PM</p>
-        <div class="border"></div>
-        <p>Friday 10AM - 10PM</p>
-        <div class="border"></div>
-        <p>Weekends 10AM - 11PM</p>
-        <div class="border"></div>
-    </div>
-    <div class="text">
-        <h4>Contact Details</h4>
-        <p>Manchester Road 123-78B, Silictown 7854MD, Great Country</p>
-        <div class="border"></div>
-        <p>+46 123 456 789</p>
-        <div class="border"></div>
-        <p>Friday 10AM - 10PM Weekends 10AM - 11PM Contact Details Manchester Road 123-78B, Silictown 7854MD, Great Country +46 123 456 789 hello@sitename.com</p>
-        <div class="border"></div>
-        <p>http://www.sitename.com</p>
-        <div class="border"></div>
-</div>
-</div> -->
-
-
-
-
-
-
-
-
-
-
-
-
 
 </footer>
-
 
 
 
