--- a/Angora/index.html
+++ b/Angora/index.html
@@ -67,7 +67,6 @@
         </div>
     </nav>
     <section id="Home">
-        <div class="layer">
 
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -106,7 +105,6 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
-        </div>
         <a class="scroll-down rounded-5" href="#About"></a>
     </section>
     <section id="About">
@@ -251,10 +249,10 @@
                 </div>
             </div>
             <div class="row justify-content-center text-center pt-5 ps-5">
-                <div class="col-md-6 pt-5">
+                <div class="col-md-6 pt-5 py-lg-5">
                     <h3>Do you have any ideas?</h3>
                 </div>
-                <div class="col-md-4 pt-1">
+                <div class="col-md-4 pt-1 pt-lg-5">
                     <a href="#Contact" class="button"><button class="btn text-white fw-bold">Contact US</button></a>
                 </div>
 
