--- a/Angora/index.html
+++ b/Angora/index.html
@@ -561,7 +561,7 @@
     <div class="footer-social py-4 ">
         <div class="container text-center">
             <div class="row">
-                <div class="col-md-6 ps-lg-5 ps-0 ">
+                <div class="col-md-6 ps-lg-5 ps-0 pt-2 ">
                     <a href="" class="text-white px-2"><i class="fa-brands fa-twitter"></i></a>
                     <a href="" class="text-white px-2"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="" class="text-white px-2"><i class="fa-brands fa-instagram"></i></a>
